Fixed spacing between image and 1st paragraph

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,12 +76,12 @@ hr {
     margin-top:10px;
     height:175px;
     width:225px;
-    padding-right:20px;
+    margin-right:30px;
 }
 
 .bioTop{
     margin-left:45px;
-    margin-right:30px;
+    padding-right:45px;
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height:30px;
     color:gray;
@@ -90,7 +90,7 @@ hr {
 
 .bioMiddle {
     margin-left:45px;
-    padding-right:30px; 
+    margin-right:30px; 
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height:30px;
     color:gray;
@@ -99,7 +99,7 @@ hr {
 
 .bioBottom {
     margin-left:45px;
-    padding-right:30px; 
+    margin-right:30px; 
     padding-bottom:20px;
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height:30px;
